change figure 4 plot to make the plot labels bigger, and make the layout consistent with figure 3

--- a/March_2016 wb other analyses_29mar.Rmd
+++ b/March_2016 wb other analyses_29mar.Rmd
@@ -22,13 +22,13 @@ output: html_document
 # also loading the multiplot function, which will be super useful as we go on:
 
 #load the multiplot script that's sooo awesome in making panel graphs
-source('E:/stego web/web-construction FINAL round - raw data/analysis-FINALround/analysis-scripts/smoothworkflow/multiplot.R')
+source('D:/stego web/web-construction FINAL round - raw data/analysis-FINALround/analysis-scripts/smoothworkflow/multiplot.R')
 
 # pixpm --> is the scaling factor from pixels --> metres.
 
 # common address:
 
-comad<-'E:/stego web/web-construction FINAL round - raw data/analysis-FINALround/analysis-results/semifinal_16May/'
+comad<-'D:/stego web/web-construction FINAL round - raw data/analysis-FINALround/analysis-results/semifinal_16May/'
 
 
 ps=1;
@@ -91,7 +91,6 @@ mgwd<-merge(mnwd,sdwd); mgwd<-mgwd[order(mgwd[,1],mgwd[,2]),]
 pd <- position_dodge(width = 0.8)
 mgwd1<-subset(mgwd,day<10)
 mgplt<- ggplot(mgwd1,aes(x=as.factor(day),y=meanL,group=as.factor(groupsize))) +geom_pointrange(aes(ymin=meanL-sdL, ymax=meanL+sdL,shape=as.factor(mgwd1$groupsize),width=0.9),size=1.3,position=pd) + xlab('Days') + ylab('Length of silk (metres)') +geom_line(lwd=1,position=pd)+labs(shape = "Group Size")+ theme(text = element_text(size=15)) ; mgplt
-
 
 
 
@@ -200,11 +199,14 @@ mgpc<-merge(mnpc,sdpc); mgpc<-mgpc[order(mgpc[,1],mgpc[,2]),]
 #
 pd <- position_dodge(width = 0.8)
 mgpc1<-subset(mgpc,day<9)
-mgpltpc<- ggplot(mgpc1,aes(x=as.factor(day),y=meanPC,group=as.factor(groupsize),col=as.factor(groupsize))) +geom_pointrange(aes(ymin=meanPC-sdPC, ymax=meanPC+sdPC,shape=as.factor(mgpc1$groupsize),width=0.9),size=1.1,position=pd) + xlab('Days') + ylab('Per-capita silk investment (metres)') +geom_line(lwd=1,position=pd)  ; mgpltpc
+mgpltpc<- ggplot(mgpc1,aes(x=as.factor(day),y=meanPC,group=as.factor(groupsize))) +geom_pointrange(aes(ymin=meanPC-sdPC, ymax=meanPC+sdPC,shape=as.factor(mgpc1$groupsize),width=0.9),size=1.3,position=pd) + xlab('Days') + ylab('Per-capita silk investment (metres)') +geom_line(lwd=1,position=pd)+labs(shape = "Group Size")+ theme(text = element_text(size=15))  ; mgpltpc
 
 
+# Parameters from figure 3 - for consistency
+#mgplt<- ggplot(mgwd1,aes(x=as.factor(day),y=meanL,group=as.factor(groupsize))) +geom_pointrange(aes(ymin=meanL-sdL, ymax=meanL+sdL,shape=as.factor(mgwd1$groupsize),width=0.9),size=1.3,position=pd) + xlab('Days') + ylab('Length of silk (metres)') +geom_line(lwd=1,position=pd)+labs(shape = "Group Size")+ theme(text = element_text(size=15)) ; mgplt
 
-````
+
+```
 
 
 
